src/main/java/com/example/parking/common/error/ErrorCodeIfs.java
package com.example.parking.common.error;

public interface ErrorCodeIfs {
    Integer getHttpStatusCode();
    Integer getErrorCode();
    String getDescription();
}
